# hpp-proto

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DarwinPresets.json  Dockerfile.conan  LICENSE  LinuxPresets.json  README.md  TODO.md  WindowsPresets.json  codecov.yml  conanfile.py  cpm-package-lock.cmake  crypto_approve_allowance.request.pb  cspell.json  gen_lcov_info.sh.in  glaze-2.9.5.patch  glaze-5.0.2.patch  glaze-6.0.3.patch  glaze.patch  hpp_proto-config.cmake.in  hpp_proto.cmake  index.html  note.txt  third-parties.cmake  third-party.cmake  vcpkg.json
.clusterfuzzlite/: Dockerfile  build.sh  migrate-storage.sh
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: CMakeLists.txt  Linux_bench.json  Linux_bench.result  Linux_sizes.json  Mac_bench.json  Mac_bench.result  Mac_sizes.json  ReadMe.md  benchmark.cpp  benchmark_messages_proto3_lite.proto  benchmark_util.h.in  gen_sizes.py  google_decode_encode.cpp  google_decode_encode_lite.cpp  hpp_proto_decode_encode.cpp  packed_repeated_message.proto  process_proto_bench_output.py
benchmarks/google_cpp/: CMakeLists.txt  google_cpp_benchmark.cpp
benchmarks/hpp_proto/: CMakeLists.txt  hpp_benchmark.cpp
cmake/: add_hpp_proto_lib.cmake  conan_protoc_target.cmake  coverage.cmake  gen_proto_descriptor_set.cmake  grpc_check.cmake  grpc_check.cpp  hpp_proto_clang_tidy_helpers.cmake  hpp_proto_install_package.cmake  hpp_proto_test_helpers.cmake  protobuf_generate.cmake  protobuf_generate_hpp.cmake  protoc_compile.cmake  protoc_download.cmake  protoc_find.cmake  protoc_install.cmake.in  verify_fuzz_instrumentation.py
compatibility/: CMakeLists.txt  hpp_proto_test.cpp
fuzz/: CMakeLists.txt  Improvement.md  append_fuzz_suffix.py  binpb_extern.cpp  binpb_extern.hpp  common.cpp  common.hpp  fuzz_binpb.cpp  fuzz_binpb.dict  fuzz_binpb.sh  fuzz_case.cpp  fuzz_case_main.cpp  fuzz_descriptor.cpp  fuzz_descriptor.dict  fuzz_descriptor.sh  fuzz_dynamic_serializer.cpp  fuzz_json.cpp  fuzz_json.dict  fuzz_json.sh  fuzz_pb.dict  fuzz_pb.sh  fuzz_pb_serializer.cpp  fuzz_proto3_unittest_TestAllTypes.cpp  fuzz_unittest_TestAllTypes.cpp  fuzz_unittest_TestMap.cpp  fuzzer_check.cpp  json_extern.cpp  json_extern.hpp  read_file.cpp  value_extern.hpp
fuzz/binpb_seed_corpus/: crash-8a510296beb41e7dc92526792907d7fb27de2026
protoc-plugin/: CMakeLists.txt  hpp_gen.cpp  hpp_generator.cpp
src/: CMakeLists.txt
src/dynamic_message/: CMakeLists.txt  factory.cpp
src/protoc-plugin/: CMakeLists.txt  cpp_lexical_emitter.cpp  cpp_lexical_emitter.hpp  hpp_gen.cpp  hpp_generator.cpp  hpp_generator.hpp  protoc-gen-hpp.cpp
tests/: CMakeLists.txt  any_test.cpp  basic_test_editions.proto  basic_test_editions_test.cpp  basic_test_proto2.cpp  basic_test_proto2.proto  cpp_lexical_cross_file_enum.proto  cpp_lexical_emitter_test.cpp  cpp_lexical_generated_test.cpp  cpp_lexical_generated_test.proto  descriptor_test_corpus.hpp  dyn_proto_json_test.cpp  dynamic_message_factory_test.cpp  dynamic_message_test.cpp  dynamic_serializer_coverage_tests.cpp  dynamic_serializer_tests.cpp  editions_test.proto  glaze_tests.cpp  hpp_generator_test.cpp  hpp_options_test.cpp  hpp_options_test.proto  json_alias_preserved_test.proto  json_alias_test.cpp  json_alias_test.proto  json_required_alias_test.proto  json_serializer_tests.cpp  map_test.cpp  map_test_util.h  map_test_util.hpp  non_owning_proto2_test.cpp  non_owning_proto3_test.cpp  pb_serializer_tests.cpp  proto2_extension_test.proto  proto3_decode.cpp  proto_tests.cpp  read_json_consistency_test.cpp  recursive_map_cycle.proto  recursive_map_cycle_test.cpp  reflection_test.cpp  test_descriptors.cmake  (+13 more)
tests/data/: CMakeLists.txt  proto2_unittest.TestWellKnownTypes.binpb  proto2_unittest.TestWellKnownTypes.json  proto3_unittest.TestAllTypes.binpb  proto3_unittest.TestAllTypes.json  proto3_unittest.TestUnpackedTypes.binpb  proto3_unittest.TestUnpackedTypes.json  proto3_unittest.TestUnpackedTypes.pb  protobuf_unittest.TestAllTypes.json  protobuf_unittest.TestAllTypes.pb  protobuf_unittest.TestAllTypesLite.json  protobuf_unittest.TestMap.binpb  protobuf_unittest.TestMap.json  protobuf_unittest.TestPackedTypes.json  protobuf_unittest.TestPackedTypesLite.json  protobuf_unittest.TestUnpackedTypes.binpb  protobuf_unittest.TestUnpackedTypes.json
tests/google/protobuf/: unittest.proto  unittest_lite.proto
tests/gpb_proto_json/: CMakeLists.txt  gpb_proto_json.cpp  gpb_proto_json.h  gpb_proto_json.hpp  proto_json.cpp
tests/grpc/: CMakeLists.txt  README.md  bidi_stream_tests.cpp  client_stream_tests.cpp  echo_stream.proto  grpc_serialization_tests.cpp  grpc_test_server.cpp  grpc_tests.cpp  run_grpc_test.py  server_failure_tests.cpp  server_stream_tests.cpp  test_harness.hpp  unary_official_tests.cpp  unary_tests.cpp
tests/proto2json/: CMakeLists.txt  proto2json.cpp  proto2json.h
tutorial/: CMakeLists.txt  addressbook_proto3.proto  any_demo.proto  conanfile.txt  tutorial_json.cpp  tutorial_proto.cpp
tutorial/compile_time_serialization/: CMakeLists.txt  compile_time_serialization.cpp  person.proto
tutorial/consteval/: CMakeLists.txt  addressbook_lite.proto  main.cpp
tutorial/dynamic_message/: CMakeLists.txt  tutorial_proto3_dynamic.cpp
tutorial/dynamic_serializer/: CMakeLists.txt  protobuf_json_conversion.cpp
tutorial/grpc/: CMakeLists.txt  greeter_client.cpp  greeter_server.cpp  greeter_test.sh  helloworld.proto
tutorial/mixed_ownership/: CMakeLists.txt  mixed_ownership_tutorial.cpp
tutorial/non_owning/: CMakeLists.txt  non_owning_tutorial_any.cpp  non_owning_tutorial_proto2.cpp  non_owning_tutorial_proto3.cpp
tutorial/pmr/: CMakeLists.txt  pmr_tutorial_proto3.cpp
tutorial/pmr_traits/: CMakeLists.txt  pmr_traits.cpp
tutorial/regular/: CMakeLists.txt  tutorial_any.cpp  tutorial_proto2.cpp  tutorial_proto3.cpp
unittests/: CMakeLists.txt  flat_map_tests.cpp  indirect_tests.cpp  json_serializer_tests.cpp  merge_message_tests.cpp  optional_indirect_tests.cpp  packed_vint_tests.hpp  pb_serializer_tests.cpp  test_allocators.hpp  test_util.h  test_util.hpp
(+360 files in other folders)
